--- a/src/app/components/package.json
+++ b/src/app/components/package.json
@@ -1,6 +1,6 @@
 {
     "name": "primeng",
-    "version": "11.4.2",
+    "version": "11.4.2-AMC-9",
     "repository": {
       "type": "git",
       "url": "https://github.com/primefaces/primeng"
